# backend-core

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  alembic.ini  conftest.py  docker-compose.yml  master-prompt-backend-core.md  pyproject.toml
.github/workflows/: ci.yml  template-drift.yml
app/: __init__.py  admin_screens.py  config.py  db.py  features.py  logging_setup.py  main.py  middleware.py  observability.py  redis_client.py  routes.py  startup_checks.py  worker.py
core/: __init__.py  subscribers.py
core/admin/: README.md  __init__.py  permissions.py  registry.py  router.py  schemas.py  screens.py  service.py
core/audit/: README.md  __init__.py  admin.py  models.py  permissions.py  retention.py  schemas.py  service.py  subscribers.py
core/audit/migrations/: 20260706_core_audit0001_audit_log.py  20260707_core_audit0002_retention_policy.py
core/auth/: README.md  __init__.py  access_service.py  deps.py  directory.py  models.py  permissions.py  rate_limit.py  repository.py  router.py  schemas.py  service.py
core/auth/migrations/: 20260706_core_auth0001_auth_tables.py
core/auth/security/: __init__.py  encryption.py  passwords.py  tokens.py  totp.py
core/billing/: README.md  __init__.py  api.py  deps.py  jobs.py  models.py  periods.py  permissions.py  ports.py  receipts.py  repository.py  router.py  schemas.py  service.py  state_machine.py  subscribers.py  webhooks.py
core/billing/adapters/: __init__.py  click.py  payme.py  stripe.py
core/billing/migrations/: 20260706_core_billing0001_billing_tables.py
core/billing/templates/ru/: billing.payment_succeeded.txt  billing.subscription_activated.txt
core/billing/templates/uz/: billing.payment_succeeded.txt  (+1 more)
core/files/: README.md  __init__.py  content_types.py  deps.py  models.py  permissions.py  ports.py  repository.py  router.py  schemas.py  service.py
core/files/adapters/: __init__.py  filesystem.py  pillow.py  s3.py
core/files/migrations/: 20260708_core_files0001_files.py
core/notifications/: README.md  __init__.py  channel_config.py  dispatcher.py  models.py  ports.py  registry.py  repository.py  retention.py  schemas.py  service.py  sms_cap.py
core/notifications/channels/: __init__.py  email.py  eskiz.py  telegram.py
core/notifications/migrations/: 20260707_core_notifications0001_notifications_tables.py
core/tenants/: README.md  __init__.py  directory.py  models.py  permissions.py  repository.py  router.py  schemas.py  service.py  sync.py
core/tenants/migrations/: 20260706_core_tenants0001_tenant_tables.py
docker/postgres-init/: 01-roles.sql
docs/: DEPLOYMENT.md  HANDOFF.md  RECONCILIATION.md  UPDATE.md
docs/adr/: 0001-modular-monolith.md  0002-stack.md  0003-multitenancy.md  0004-three-level-constructor.md  0005-dependency-rules.md  0006-event-bus.md  0007-domain-errors.md  0008-multibranch-alembic.md  0009-template-update-strategy.md  0010-jwt-algorithm.md
docs/phase0/: 00-open-questions.md  01-db-schema.md  02-interfaces-events.md  03-threat-model.md  04-update-strategy.md  README.md
examples/: README.md
examples/custom-delivery/: README.md
migrations/: __init__.py  cli.py  discovery.py  env.py
modules/: __init__.py  loader.py
modules/commerce/: README.md  __init__.py
modules/commerce/cart/: README.md  __init__.py  deps.py  feature.toml  models.py  repository.py  router.py  schemas.py  service.py
modules/commerce/orders/: README.md  __init__.py  admin.py  deps.py  feature.toml  models.py  permissions.py  repository.py  router.py  schemas.py  service.py  subscribers.py
modules/commerce/product_images/: README.md  __init__.py  deps.py  feature.toml  models.py  permissions.py  repository.py  router.py  schemas.py  service.py
modules/commerce/products/: README.md  __init__.py  deps.py  feature.toml  models.py  permissions.py  repository.py  router.py  schemas.py  service.py
modules/crm/: README.md  __init__.py
modules/crm/contacts/: README.md  __init__.py  deps.py  feature.toml  models.py  permissions.py  repository.py  router.py  schemas.py  service.py
modules/saas/: README.md  __init__.py
modules/saas/entitlements/: README.md  __init__.py  deps.py  feature.toml  models.py  permissions.py  repository.py  router.py  schemas.py  service.py  subscribers.py
modules/saas/metering/: README.md  __init__.py  deps.py  feature.toml  models.py  permissions.py  retention.py  router.py  schemas.py  service.py
modules/saas/onboarding/: README.md  __init__.py  deps.py  feature.toml  models.py  permissions.py  repository.py  router.py  schemas.py  service.py
shared/: __init__.py  config.py  context.py  db.py  db_provisioning.py  encryption.py  endpoint_markers.py  error_catalog.py  errors.py  events.py  handler_runtime.py  i18n.py  ids.py  money.py  pagination.py  processed_events.py  repository.py  resilience.py  rls.py  security_tokens.py  service.py  system_repository.py
shared/locales/errors/: ru.json  uz.json
shared/migrations/: 20260706_shared0001_processed_events.py  20260706_shared0002_rls_context.py
tests/: conftest.py  models.py  test_admin_api.py  test_admin_registry.py  test_app_endpoints.py  test_audit.py  test_audit_search.py  test_auth_flows.py  test_auth_flows_extended.py  test_auth_rate_limit.py  test_auth_security.py  test_billing_adapters.py  test_billing_api.py  test_billing_jobs.py  test_billing_receipts.py  test_billing_service.py  test_billing_webhooks.py  test_commerce_worker_dispatch.py  test_config.py  test_errors.py  test_events_bus.py  test_feature_loader.py  test_feature_transfer.py  test_files_api.py  test_files_storage.py  test_files_thumbnails.py  test_global_and_system_repository.py  test_i18n_errors.py  test_logging.py  test_manifest_honesty.py  test_migrations.py  test_money_pagination.py  test_notifications_channels.py  test_notifications_dispatcher.py  test_notifications_service.py  test_reliable_dispatch.py  test_repository.py  test_resilience.py  test_retention.py  test_rls.py  (+5 more)
tools/: __init__.py  add_feature.py
(+21 files in other folders)
