[project]
name = "backend-core"
version = "0.3.0"
description = "Переиспользуемый шаблон-конструктор бэкенда: ядро → модули → фичи (рынок УЗ/СНГ)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",
    "structlog>=24.4",
    "sentry-sdk>=2.19",
    "prometheus-client>=0.21",
    "uuid-utils>=0.10",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "pyotp>=2.9",
    "cryptography>=44.0",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres,redis]>=4.9",
    "mypy>=1.13",
    "ruff>=0.8",
    "import-linter>=2.1",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "C4",               # comprehensions
    "DTZ",              # naive datetime запрещён
    "T20",              # print запрещён (только структурированные логи)
    "SIM",              # simplify
    "PTH",              # pathlib
    "RUF",              # ruff-специфичные
    "S",                # bandit-подмножество
    "ASYNC",            # async-ловушки
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S311", "S608"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom requires these calls in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["^\\.venv/"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "integration: тесты с реальными Postgres/Redis через testcontainers (нужен Docker)",
]

[tool.coverage.run]
source = ["app", "shared"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.importlinter]
root_packages = ["app", "core", "shared"]

[[tool.importlinter.contracts]]
name = "Слои: app -> core -> shared, только вниз"
type = "layers"
layers = ["app", "core", "shared"]

[[tool.importlinter.contracts]]
name = "core не импортирует app"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["app"]

[[tool.importlinter.contracts]]
name = "SystemRepository — только для core/ (app напрямую не тянет)"
type = "forbidden"
source_modules = ["app"]
forbidden_modules = ["shared.system_repository"]
allow_indirect_imports = "true"
